--- a/src/60_integrations/__canvas.scss
+++ b/src/60_integrations/__canvas.scss
@@ -2,7 +2,6 @@
   --resizer-size: 16px;
   --shadow-stationary: var(--shadow-canvas-node);
   --shadow-drag: 0px 0px transparent;
-  --shadow-border-accent: 0 0 0 2px var(--color-accent-1);
   --bases-table-header-background: var(--background-primary-alt);
   --canvas-color: 150, 150, 150;
 }
